--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li class="option" id="3" onclick = "checkAnswer('3')"></li>
                     <li class="option" id="4" onclick = "checkAnswer('4')"></li>
                 </ul>            
-                <section id="timer">
+                <section id="time">
                     <section id="answers"></section>
                 </section>    
                 <section id="score" class = "hide"></section>
