--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
                     <li class="option" id="3" onclick = "checkAnswer('3')"></li>
                     <li class="option" id="4" onclick = "checkAnswer('4')"></li>
                 </ul>            
-                <section id="time">
-                    <section id="answers"></section>
-                </section>    
-                <section id="score" class = "hide"></section>
+                <section id="time"></section>
+                <section id="answers"></section>   
+                    
+                <section id="score" class="hide"></section>
             </section>
+            
         </section>
 
         <footer>
