Add check on questions

--- a/index.html
+++ b/index.html
@@ -31,17 +31,15 @@
             <section id="code-quiz" class = "hide">
                 <section id="question"> </section>
                 <ul id = "options"> 
-                    <li class="option" id="1" onclick = "checkAnswer('1')"></li>
-                    <li class="option" id="2" onclick = "checkAnswer('2')"></li>
-                    <li class="option" id="3" onclick = "checkAnswer('3')"></li>
-                    <li class="option" id="4" onclick = "checkAnswer('4')"></li>
+                    <li class="option" id="first" onclick = "checkAnswer('first')"></li>
+                    <li class="option" id="second" onclick = "checkAnswer('second')"></li>
+                    <li class="option" id="third" onclick = "checkAnswer('third')"></li>
+                    <li class="option" id="fourth" onclick = "checkAnswer('fourth')"></li>
                 </ul>            
                 <section id="time"></section>
-                <section id="answers"></section>   
-                    
+                <section id="answers"></section>                    
                 <section id="score" class="hide"></section>
-            </section>
-            
+            </section>            
         </section>
 
         <footer>
