Add Score Message

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     <li class="option" id="fourth" onclick = "checkAnswer('fourth')"></li>
                 </ul>            
                 <section id="time"></section>
-                <section id="answers"></section>                    
-                <section id="score" class="hide"></section>
-            </section>            
+                <section id="answers"></section>  
+            </section>  
+            <section id="score" class="hide display-score"></section>          
         </section>
 
         <footer>
