Fix Html to display form

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <section id="parent"> 
                     <section id= "child">
                         <p>Try to answer the following code-reletated questions within the time limit</p>
-                        <p>Keep in mind that incorrect answers will penalise your score / time by ten seconds</p>
+                        <p>Keep in mind that incorrect answers will penalise your score / time by 10 seconds</p>
                         <p id="btn1"> Start Quiz</p>
                     </section>
                 </section>
@@ -39,9 +39,9 @@
                 <section id="time"></section>
                 <section id="answers"></section>  
             </section>  
-            <section id="score" class="hide display-score"></section>
-            <section  id="show-form" >
-                <form id="todo-form" method="POST" class="hide">
+            <section id="score" class="hide"></section>
+            <section  id="show-form" class="hide">
+                <form id="todo-form" method="POST">
                     <label for="todo-text">Add your Name: </label>
                     <input type="text" name="todo-text" id="todo-text" />
                 </form>
