Fix README , Add Gif

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
                         <input type="text" name="scoretext" id="scoretext" />
                     </form>
                     <p>Scores: <span id="score-count">0</span></p>
-                    <ul id="score-list"></ul>
                 </section>
+            </section>
+            <section id="score-wrapper">        
+                    <ul id="score-list"></ul>                
             </section>
 
         </section>
